--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     "typescript": "^5.7.3"
   },
   "scripts": {
-    "start": " node  src/server.ts"
+    "start": " ts-node  src/server.ts"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
