--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,28 @@
 {
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
-    "@types/nodemon": "^1.19.6",
-    "typescript": "^5.7.3"
-  },
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.ts",
   "scripts": {
-    "start": " ts-node  src/server.ts"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./src/server.ts"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "express-validator": "^7.2.1",
-    "mongoose": "^8.10.1"
+    "mongoose": "^8.10.1",
+    "nodemon": "^3.1.9"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.7.3"
   }
 }
